BARC UAT/src/objects/HouseHold_TV_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Availability_of_Remote__c</fullName>
        <label>Availability of Remote</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_VC_No__c</fullName>
        <label>Customer VC No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTH_Services__c</fullName>
        <label>DTH Services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dish TV</fullName>
                </value>
                <value>
                    <fullName>Airtel</fullName>
                </value>
                <value>
                    <fullName>DD Direct</fullName>
                </value>
                <value>
                    <fullName>Tata Sky</fullName>
                </value>
                <value>
                    <fullName>Videocon</fullName>
                </value>
                <value>
                    <fullName>Sun Direct</fullName>
                </value>
                <value>
                    <fullName>Reliance Big TV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_use_recording_feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you use recording feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dongle_Number__c</fullName>
        <label>Dongle Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flat_Screen__c</fullName>
        <label>Flat Screen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HD_Enabled_TV__c</fullName>
        <label>HD Enabled TV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HD_Subscription__c</fullName>
        <label>HD Subscription</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HouseHold__c</fullName>
        <label>HouseHold</label>
        <referenceTo>HouseHold__c</referenceTo>
        <relationshipLabel>HouseHold TV Details</relationshipLabel>
        <relationshipName>HouseHold_TV_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Kitting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kitting</label>
        <referenceTo>Kitting__c</referenceTo>
        <relationshipLabel>HouseHold TV Details</relationshipLabel>
        <relationshipName>HouseHold_TV_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Presence_of_DVR_PVR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presence of DVR/PVR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STB_ID__c</fullName>
        <label>STB ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STB_Make__c</fullName>
        <label>STB Make</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HuaweiDS366</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>DEN</fullName>
                </value>
                <value>
                    <fullName>SITI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_of_Screen_in_Inches__c</fullName>
        <label>Size of Screen (in Inches)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>14 inches or less</fullName>
                </value>
                <value>
                    <fullName>15-20 inches</fullName>
                </value>
                <value>
                    <fullName>21-27 Inches</fullName>
                </value>
                <value>
                    <fullName>28-32 Inches</fullName>
                </value>
                <value>
                    <fullName>33-42 Inches</fullName>
                </value>
                <value>
                    <fullName>43 inches or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T7_2__c</fullName>
        <formula>CASE(Type_of_Television__c, 
						&quot;Color TV&quot;, &quot;1&quot;, 
						&quot;Black &amp; White&quot;, &quot;2&quot;,
						&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T7_2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T7_4__c</fullName>
        <formula>CASE(Size_of_Screen_in_Inches__c, 
						&quot;14 inches or less&quot;, &quot;1&quot;, 
						&quot;15-20 inches&quot;, &quot;11&quot;,
						&quot;21-27 Inches&quot;, &quot;12&quot;,
						&quot;28-32 Inches&quot;, &quot;13&quot;,
						&quot;33-42 Inches&quot;, &quot;14&quot;,
						&quot;43 inches or more&quot;, &quot;15&quot;,
						&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T7_4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T7_6__c</fullName>
        <formula>CASE(Type_of_TV_Screen__c, 
						&quot;CRT&quot;, &quot;1&quot;, 
						&quot;LCD&quot;, &quot;2&quot;,
						&quot;Plasma&quot;, &quot;3&quot;,
						&quot;HDTV&quot;, &quot;4&quot;,
						&quot;Projection TV&quot;, &quot;5&quot;,
						&quot;LED&quot;, &quot;6&quot;,
						&quot;Others&quot;, &quot;7&quot;,
						&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T7_6</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TV_Signal_Reception__c</fullName>
        <label>TV Signal Reception</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DTH</fullName>
                </value>
                <value>
                    <fullName>Aerial / Normal Antenna</fullName>
                </value>
                <value>
                    <fullName>Cable Operator with Set Top Box</fullName>
                </value>
                <value>
                    <fullName>Cable Operator without Set Top Box</fullName>
                </value>
                <value>
                    <fullName>IPTV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TV_sets_located_at_your_home__c</fullName>
        <label>TV sets located at your home</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hall/Drawing Room</fullName>
                </value>
                <value>
                    <fullName>Bedroom</fullName>
                </value>
                <value>
                    <fullName>Kitchen</fullName>
                </value>
                <value>
                    <fullName>Dining Room</fullName>
                </value>
                <value>
                    <fullName>Servent Room</fullName>
                </value>
                <value>
                    <fullName>Prayer Room</fullName>
                </value>
                <value>
                    <fullName>Balcony</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_TV_Screen__c</fullName>
        <label>Type of TV Screen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CRT</fullName>
                </value>
                <value>
                    <fullName>LCD</fullName>
                </value>
                <value>
                    <fullName>Plasma</fullName>
                </value>
                <value>
                    <fullName>HDTV</fullName>
                </value>
                <value>
                    <fullName>Projection TV</fullName>
                </value>
                <value>
                    <fullName>LED</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Television__c</fullName>
        <label>Type of Television</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Color TV</fullName>
                </value>
                <value>
                    <fullName>Black &amp; White</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USB_HUB_Installed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>USB HUB Installed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_Since_Acquired__c</fullName>
        <label>Year Since Acquired</label>
        <type>Date</type>
    </fields>
    <label>HouseHold TV Detail</label>
    <nameField>
        <displayFormat>HHTV-{0}</displayFormat>
        <label>Household TV No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HouseHold TV Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>